# jewellery-erpnext

jewellery-erpnext-New-Gurukrupa-Export_v1/: .eslintrc  LICENSE  QUICK_FIX_COMMANDS.txt  SETUP_SITE.ps1  check_core_deps.py  pyproject.toml  setup.py
jewellery-erpnext-New-Gurukrupa-Export_v1/jewellery_erpnext/: erpnext_override.py  hooks.py  interbranch.py  jobs.py  migrate.py  patches.txt  query.py  utils.py
jewellery-erpnext-New-Gurukrupa-Export_v1/jewellery_erpnext/config/: desktop.py  docs.py
jewellery-erpnext-New-Gurukrupa-Export_v1/jewellery_erpnext/fixtures/: custom_field.json  doctype.json  property_setter.json  stock_entry_type.json  tolerance_weight_type.json
jewellery-erpnext-New-Gurukrupa-Export_v1/jewellery_erpnext/jewellery_erpnext/custom/: customer.json  purchase_invoice.json  purchase_invoice_item.json  supplier.json
jewellery-erpnext-New-Gurukrupa-Export_v1/jewellery_erpnext/jewellery_erpnext/custom_fields/: account.json  attribute_value.json  batch.json  bom.json  branch.json  company.json  customer.json  delivery_note.json  delivery_note_item.json  department.json  employee_transfer.json  item.json  manufacturer.json  material_request.json  material_request_item.json  parent_manufacturing_order.json  quotation.json  (+21 more)
jewellery-erpnext-New-Gurukrupa-Export_v1/jewellery_erpnext/patches/: add_department_index.py  add_department_ir_indexes.py  add_item_index.py  create_custom_field.py  remove_se_custom_fields.py  sed_copy_to_mop.py  truncate_manufacturing_operation_field.py
jewellery-erpnext-New-Gurukrupa-Export_v1/scripts/: check_max_lines.py
(+657 files in other folders)
