[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jewellery_erpnext"
authors = [{name = "Prashant Kamble", email = "prashantkamble@8848digital.com"}]
readme = "README.md"
dynamic = ["version"]
description = "jewellery custom app"
dependencies = [
    # Core dependencies
    "html2text",
]

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"


# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"